# scraping

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  page.rs  scraping.rs  service.rs
src/cli/: apply.rs
src/model/: article.rs
src/page/: rust_blog_page.rs
src/scraping/: rust_blog_page_scraping.rs
src/service/: generate_articles_csv.rs
